kustomize/base/config.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: quay-config-editor
  labels:
    quay-component: base
spec:
  replicas: 1
  selector:
    matchLabels:
      quay-component: quay-config-editor
  template:
    metadata:
      labels:
        quay-component: quay-config-editor
    spec:
      volumes:
        - name: config
          secret:
            secretName: quay-config-secret
        - name: extra-ca-certs
          configMap:
            name: cluster-service-ca
      containers:
        - name: quay-config-editor
          image: quay.io/projectquay/quay@sha256:5660d7174218e1cb21bf6ef406602dbe8c01c878c630a9f310fe3e5560d4c2cd
          ports:
            - containerPort: 8080
              protocol: TCP
          args: ["config", "$(QUAY_PASSWORD)", "$(QUAY_OPERATOR_ENDPOINT)"]
          volumeMounts:
            - name: config
              mountPath: /conf/stack
            - name: extra-ca-certs
              mountPath: /conf/stack/extra_ca_certs
