kustomize/base/quay.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: quay-app
  labels:
    quay-component: quay
  annotations:
    quay-component: quay
spec:
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  selector:
    matchLabels:
      quay-component: quay-app
      app: quay
  template:
    metadata:
      labels:
        quay-monitor: "true"
        quay-component: quay-app
        app: quay
    spec:
      serviceAccountName: quay-app
      volumes:
        - name: config
          projected:
            sources:
            - secret:
                name: quay-config-secret
            - secret:
                name: quay-config-tls
        - name: extra-ca-certs
          projected:
            sources:
              - configMap:
                  name: cluster-service-ca
              - configMap:
                  name: cluster-trusted-ca
              - secret:
                  name: extra-ca-certs
        - name: postgres-certs
          projected:
            sources:
            - secret:
                name: postgresql-ca
                optional: true
            - secret:
                name: postgresql-client-certs
                optional: true
        - name: postgres-certs-store
          emptyDir:
            sizeLimit: 5Mi
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - weight: 100
            podAffinityTerm:
              labelSelector:
                matchExpressions:
                - key: quay-component
                  operator: In
                  values:
                  - quay-app
              topologyKey: "kubernetes.io/hostname"
      containers:
        - name: quay-app
          securityContext:
            allowPrivilegeEscalation: false
            runAsNonRoot: true
            capabilities:
              drop:
                - ALL
              add:
                - NET_BIND_SERVICE
          image: quay.io/projectquay/quay:latest
          args: ["registry-nomigrate"]
          ports:
            - containerPort: 8443
              protocol: TCP
            - containerPort: 8080
              protocol: TCP
            - containerPort: 8081
              protocol: TCP
            - containerPort: 9091
              protocol: TCP
            - containerPort: 55443
              protocol: TCP
          resources:
            requests:
              cpu: 2000m
              memory: 8Gi
            limits:
              cpu: 2000m
              memory: 8Gi
          startupProbe:
            httpGet:
              path: /health/instance
              port: 8080
              scheme: HTTP
            timeoutSeconds: 20
            periodSeconds: 15
            failureThreshold: 10
          readinessProbe:
            httpGet:
              path: /health/instance
              port: 8080
              scheme: HTTP
            timeoutSeconds: 10
            periodSeconds: 15
            failureThreshold: 10
          livenessProbe:
            httpGet:
              path: /health/instance
              port: 8080
              scheme: HTTP
            timeoutSeconds: 10
            periodSeconds: 15
            failureThreshold: 10
          volumeMounts:
            - name: config
              readOnly: false
              mountPath: /conf/stack
            - name: extra-ca-certs
              readOnly: true
              mountPath: /conf/stack/extra_ca_certs
            - name: postgres-certs
              mountPath: /run/secrets/postgresql
            - name: postgres-certs-store
              mountPath: /.postgresql
