kustomize/base/upgrade.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: quay-app-upgrade
  labels:
    quay-component: quay-app-upgrade
spec:
  replicas: 0
  selector:
    matchLabels:
      quay-component: quay-app-upgrade
  template:
    metadata:
      labels:
        quay-component: quay-app-upgrade
    spec:
      securityContext:
        fsGroup: 1001
      volumes:
        - name: configvolume
          secret:
            secretName: quay-config-secret
      containers:
        - name: quay-app-upgrade
          image: quay.io/projectquay/quay
          ports:
            - containerPort: 8443
              protocol: TCP
            - containerPort: 8080
              protocol: TCP
            - containerPort: 8081
              protocol: TCP
          resources:
            requests:
              cpu: 2000m
              memory: 8Gi
            limits:
              cpu: 2000m
              memory: 8Gi
          readinessProbe:
            exec:
              command:
                - curl
                - '-k'
                - 'http://localhost:8080/health/instance'
            initialDelaySeconds: 30
            timeoutSeconds: 20
            periodSeconds: 15
            successThreshold: 1
            failureThreshold: 3
          volumeMounts:
            - name: configvolume
              readOnly: false
              mountPath: /conf/stack
