kustomize/base/quay.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: quay-app
  labels:
    quay-component: base
spec:
  type: ClusterIP
  ports:
    - protocol: TCP
      name: https
      port: 443
      targetPort: 8443
    - protocol: TCP
      name: http
      port: 80
      targetPort: 8080
    - name: jwtproxy
      protocol: TCP
      port: 8081
      targetPort: 8081
    - name: grpc
      protocol: TCP
      port: 55443
      targetPort: 55443
  selector:
    quay-component: quay-app
